--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-floating-whatsapp": "^5.0.8",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-scroll": "^1.9.0",
