--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.2.5",
     "@types/react-scroll": "^1.8.10",
     "i": "^0.3.7",
     "libphonenumber-js": "^1.11.4",
     "mongodb": "^6.8.0",
-    "next": "14.2.4",
+    "next": "14.2.5",
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
